Adding splunk logging using HTTP Event Collector

--- a/Splunk/src/main/resources/log4j.properties
+++ b/Splunk/src/main/resources/log4j.properties
@@ -1,11 +1,4 @@
-log4j.rootLogger=INFO, chcool, splunkrawtcp
-
-log4j.logger.org.apache.camel.impl.converter=WARN
-log4j.logger.org.apache.camel.management=WARN
-log4j.logger.org.apache.camel.impl.DefaultPackageScanClassResolver=WARN
-log4j.logger.org.springframework=WARN
-log4j.logger.org.apache.activemq.spring=WARN
-log4j.logger.org.apache.camel=INFO
+log4j.rootLogger=INFO, chcool, splunkhec
 
 log4j.appender.chcool=org.apache.log4j.RollingFileAppender
 log4j.appender.chcool.MaxFileSize=5MB
@@ -18,9 +11,9 @@ log4j.appender.chcool.layout.ConversionPattern=%d{dd-MMM-yyyy HH:mm:ss,SSS} %-5p
 # Send log events to a Splunk REST endpoint
 log4j.appender.splunkrest=com.splunk.logging.log4j.appender.SplunkRestAppender
 log4j.appender.splunkrest.user=admin
-log4j.appender.splunkrest.pass=somepass
+log4j.appender.splunkrest.pass=Monika@2
 log4j.appender.splunkrest.host=localhost
-log4j.appender.splunkrest.port=8089
+log4j.appender.splunkrest.port=8023
 log4j.appender.splunkrest.delivery=stream
 log4j.appender.splunkrest.metaSource=rest
 log4j.appender.splunkrest.metaSourcetype=testing
@@ -46,6 +39,28 @@ log4j.appender.splunkrawtcp.layout.ConversionPattern=%m%n
 # optionally you can enrich the messages with formatting tokens from the logging framework
 #log4j.appender.splunkrawtcp.layout.ConversionPattern=%d{ABSOLUTE} %m%n
 #log4j.appender.splunkrawtcp.layout.ConversionPattern=%m loglevel="%p"%n
+
+
+
+# Send log events to a Splunk HEC Endpoint
+log4j.appender.splunkhec=com.splunk.logging.log4j.appender.SplunkHECAppender
+log4j.appender.splunkhec.host=localhost
+log4j.appender.splunkhec.port=8088
+log4j.appender.splunkhec.token=be55610f-8674-4d7a-926e-c8f34d016412
+log4j.appender.splunkhec.https=true
+log4j.appender.splunkhec.poolsize=1
+log4j.appender.splunkhec.index=main
+log4j.appender.splunkhec.source=log4j
+log4j.appender.splunkhec.sourcetype=log4j
+log4j.appender.splunkhec.maxQueueSize=5MB
+log4j.appender.splunkhec.dropEventsOnQueueFull=false
+log4j.appender.splunkhec.batchMode=true
+log4j.appender.splunkhec.maxBatchSizeBytes=1MB
+log4j.appender.splunkhec.maxBatchSizeEvents=5
+log4j.appender.splunkhec.maxInactiveTimeBeforeBatchFlush=5000
+log4j.appender.splunkhec.layout=org.apache.log4j.PatternLayout
+log4j.appender.splunkhec.layout.ConversionPattern=%m
+
 
 #Console appender
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
